Try to fix modal backdrop coverage on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,11 @@ label {
 	border-color: #575757 !important;
 }
 
+.modal-backdrop {
+	width: 100%;
+	height: 100%;
+}
+
 .figure {
 	-webkit-user-select: none;
 	-moz-user-select: none;
